WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209830
[PlayStation] Fix build breaks after
r259112
https://bugs.webkit.org/show_bug.cgi?id=209830
Summary
[PlayStation] Fix build breaks after r259112
Don Olmstead
Reported
2020-03-31 13:30:07 PDT
Compilation issues appeared after some kinetic scrolling code changes. Also some issues with linking appeared.
Attachments
Patch
(5.00 KB, patch)
2020-03-31 16:11 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-03-31 16:11:05 PDT
Created
attachment 395105
[details]
Patch
EWS
Comment 2
2020-03-31 17:12:16 PDT
Committed
r259325
: <
https://trac.webkit.org/changeset/259325
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395105
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-03-31 17:13:18 PDT
<
rdar://problem/61131903
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug